# blue

./: README.rst  pyproject.toml  tox.ini
.github/workflows/: ci.yml
blue/: __init__.py
docs/: conf.py
tests/: test_blue.py
tests/bad_cases/: demo.py
tests/config_pyproject/: example.py
tests/data/: simple.py  string_quotes.py
tests/good_cases/: decorators.py  demo.py  hanging_comments.py
